<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
    >
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:orientation="vertical" >
	
		<EditText android:id="@+id/et_alert_textToSpeak"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:freezesText="true"
	        android:inputType="textCapWords"
	        android:hint="@string/text_to_speak"/>
	
		<EditText android:id="@+id/et_alert_line1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:freezesText="true"
	        android:inputType="textCapWords"
	        android:hint="@string/alert_line1"/>
	
		<EditText android:id="@+id/et_alert_line2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:freezesText="true"
	        android:inputType="textCapWords"
	        android:hint="@string/alert_line2"/>
	
		<EditText android:id="@+id/et_alert_line3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:freezesText="true"
	        android:inputType="textCapWords"
	        android:hint="@string/alert_line3"/>
		
	    <CheckBox android:id="@+id/check_alert_playTone"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_gravity="left"
	        android:text="@string/alert_sound_enabled"
	        android:checked="true"
	        />
	    
	    <CheckBox android:id="@+id/cb_include_softbuttons"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/include_softbuttons"/>
	
	    <TextView android:id="@+id/tv_alert_toneDurationHeader"
	        style="@style/small_header_text"
	        android:text="@string/alert_duration_s"/>
	    
	    <TextView android:id="@+id/tv_alert_toneDuration"
	        style="@style/small_header_text"/>
	    
	    <SeekBar android:id="@+id/seek_alert_toneDuration"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:max="50"
	        android:progress="50"
	        />
	
	</LinearLayout>
</ScrollView>