<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:orientation="vertical"
    android:paddingLeft="20dip"
    android:paddingRight="20dip" >
    
    <EditText
        android:id="@+id/et_scrollableMessage_text"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:hint="@string/scrollable_message_hint"
        android:text="@string/scrollable_message_text">

        <requestFocus />
    </EditText>
    
    <Button android:id="@+id/but_scrollableMessage_clear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scrollable_message_clear"/>
    
    <CheckBox android:id="@+id/cb_include_softbuttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/include_softbuttons"/>

    <TextView android:id="@+id/tv_scrollableMessage_timeout"
        style="@style/small_header_text"
        android:text="@string/timeout"/>

    <SeekBar android:id="@+id/seek_scrollableMessage_timeout"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:max="64"
        android:progress="29"
        />

</LinearLayout>
