<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:orientation="vertical"
    android:paddingLeft="20dip"
    android:paddingRight="20dip" >

		<EditText
		    android:id="@+id/et_addCommand_commandName"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:freezesText="true"
		    android:inputType="textCapWords"
		    android:hint="@string/add_command_command_name"/>

		<EditText android:id="@+id/et_addCommand_voiceRecKeyword"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:freezesText="true"
		    android:inputType="textCapSentences"
		    android:hint="@string/add_command_vr_keyword"/>

		<TextView
            style="@style/small_header_text"
        	android:text="@string/add_command_parent_menu"/>
        
		<Spinner 
			android:id="@+id/spin_addCommand_submenus" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
		</Spinner>

		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    
		    <CheckBox
		        android:id="@+id/check_enable_image"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"/>
		
		    <EditText
		        android:id="@+id/et_imageName"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:inputType="textPersonName"
		        android:hint="@string/sdl_image_name"
		        android:enabled="false" />
		    
		</LinearLayout>

</LinearLayout>