<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <EditText
        android:id="@+id/et_softbutton_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/soft_button_name" >

        <requestFocus />
    </EditText>


    <CheckBox
        android:id="@+id/check_enable_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_softbutton_text"/>

    <EditText
        android:id="@+id/et_softbutton_imageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_softbutton_text"
        android:layout_toRightOf="@+id/check_enable_image"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:hint="@string/sdl_image_name" />
    
    <CheckBox
        android:id="@+id/check_enable_highlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_softbutton_imageName"
        android:text="@string/soft_button_highlight"/>

    <TextView
        android:id="@+id/tv_softbutton_action_title"
        style="@style/small_header_text"
        android:layout_below="@+id/check_enable_highlight"
        android:text="@string/soft_button_system_action"/>
        
    <Spinner 
        android:id="@+id/spin_softbutton_actions" 
        android:layout_below="@+id/tv_softbutton_action_title"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
    </Spinner>


</RelativeLayout>
