<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip" >

        
        <TextView
            android:id="@+id/tv_metadataLines"
            style="@style/small_header_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/metadata_lines"
            />
        
        <EditText
            android:id="@+id/et_show1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_metadataLines"
            android:layout_toRightOf="@+id/check_show1"
            android:hint="@string/metadata_line1"
            android:inputType="textCapWords"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/et_show2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_show1"
            android:layout_toRightOf="@+id/check_show2"
            android:hint="@string/metadata_line2"
            android:inputType="textCapWords"
            android:ems="10"/>

        <EditText
            android:id="@+id/et_show3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_show2"
            android:layout_toRightOf="@+id/check_show3"
            android:hint="@string/metadata_line3"
            android:inputType="textCapWords"
            android:ems="10"/>

        <EditText
            android:id="@+id/et_show4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_show3"
            android:layout_toRightOf="@+id/check_show4"
            android:hint="@string/metadata_line4"
            android:inputType="textCapWords"
            android:ems="10"/>

        <CheckBox
            android:id="@+id/check_show1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_show1"
            android:layout_alignParentLeft="true"
            android:checked="true" />

        <CheckBox
            android:id="@+id/check_show2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_show2"
            android:layout_alignBottom="@+id/et_show2"
            android:layout_toLeftOf="@+id/et_show1"
            android:checked="true" />

        <CheckBox
            android:id="@+id/check_show3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_show3"
            android:layout_alignParentLeft="true"
            android:checked="false" />

        <CheckBox
            android:id="@+id/check_show4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_show4"
            android:layout_alignParentLeft="true"
            android:checked="false" />
        
        <TextView
            android:id="@+id/tv_textAlignment"
            style="@style/small_header_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et_show4"
            android:text="@string/text_alignment"
            />

        <Spinner
            android:id="@+id/spin_textAlignment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_textAlignment"
            android:layout_below="@+id/tv_textAlignment" />
        
        <TextView
            android:id="@+id/tv_statusBar"
            style="@style/small_header_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/spin_textAlignment"
            android:text="@string/status_bar"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/check_statusBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_statusBar"
            android:layout_alignParentLeft="true"
            android:checked="false"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_statusBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_statusBar"
            android:layout_toRightOf="@+id/check_statusBar"
            android:ems="10"
            android:hint="@string/status_bar"
            android:inputType="textCapWords"
            android:visibility="gone" />
        
        <CheckBox
            android:id="@+id/check_enable_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spin_textAlignment"
            android:layout_alignParentLeft="true"/>
        
        <EditText
            android:id="@+id/et_show_image"
            android:layout_below="@+id/spin_textAlignment"
            android:layout_toRightOf="@+id/check_enable_image"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:inputType="textCapSentences"
            android:enabled="false"
            android:hint="@string/sdl_image_name" />
        
        
    
	    <CheckBox android:id="@+id/cb_include_softbuttons"
	        android:layout_below="@+id/check_enable_image"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentLeft="true"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/include_softbuttons"/>
        
    </RelativeLayout>

</ScrollView>
